organized files as per checkstyle