@@ -7,7 +7,12 @@ import com.db.macs3.ecomms.spectre.model.TermType;
 import com.db.macs3.ecomms.spectre.model.TypedCompileRequest;
 import com.db.macs3.ecomms.spectre.translator.TermSyntaxTranslator;
 import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.MethodOrderer;
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestMethodOrder;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -33,7 +38,7 @@ class LexiconCompileServiceTest {
 
     @BeforeEach
     void setUp() {
-        var compiler   = new HyperscanCompiler();
+        var compiler = new HyperscanCompiler();
         var translator = new TermSyntaxTranslator(compiler);
         compiler.selfTest();
         service = new LexiconCompileService(translator, compiler, new SimpleMeterRegistry());
@@ -56,7 +61,8 @@ class LexiconCompileServiceTest {
 
     // ── Spec examples from requirements ───────────────────────────────────────
 
-    @Test @Order(1)
+    @Test
+    @Order(1)
     @DisplayName("Spec example 1 (JSON): (manipulate) NEAR{5} → PASS")
     void specExample1Json() {
         var resp = compile("lexicon_research_1",
@@ -65,33 +71,36 @@ class LexiconCompileServiceTest {
         assertThat(resp.failedCount()).isEqualTo(0);
         assertThat(resp.hasFailures()).isFalse();
         assertThat(resp.engineMode()).isEqualTo("HYPERSCAN_NATIVE");
-        assertThat(resp.results().get(0).compilationStatus()).isEqualTo(CompilationStatus.PASS);
-        assertThat(resp.results().get(0).translatedPattern()).isNotEmpty();
-        assertThat(resp.results().get(0).translatedPattern().get(0)).isNotBlank();
-        assertThat(resp.results().get(0).compiledAt()).isNotNull();
+        assertThat(resp.results().getFirst().compilationStatus()).isEqualTo(CompilationStatus.PASS);
+        assertThat(resp.results().getFirst().translatedPattern()).isNotEmpty();
+        assertThat(resp.results().getFirst().translatedPattern().getFirst()).isNotBlank();
+        assertThat(resp.results().getFirst().compiledAt()).isNotNull();
     }
 
-    @Test @Order(2)
+    @Test
+    @Order(2)
     @DisplayName("Spec example 1 (CSV): (manipulate*) NEAR{5} → PASS with wildcard")
     void specExample1Csv() {
         var resp = compile("lexicon_research_1",
                 "(manipulate*) NEAR{5} ((price) OR (spread) OR (stock))");
         assertThat(resp.passCount()).isEqualTo(1);
-        var result = resp.results().get(0);
+        var result = resp.results().getFirst();
         assertThat(result.compilationStatus()).isEqualTo(CompilationStatus.PASS);
-        assertThat(result.translatedPattern().get(0)).contains("\\S*"); // wildcard translated
+        assertThat(result.translatedPattern().getFirst()).contains("\\S*"); // wildcard translated
     }
 
-    @Test @Order(3)
+    @Test
+    @Order(3)
     @DisplayName("Spec example 2: quoted OR phrases → PASS")
     void specExample2() {
         var resp = compile("lexicon_research_1",
                 "((\"please don't forward\") OR (\"do not share don't forward\"))");
         assertThat(resp.passCount()).isEqualTo(1);
-        assertThat(resp.results().get(0).compilationStatus()).isEqualTo(CompilationStatus.PASS);
+        assertThat(resp.results().getFirst().compilationStatus()).isEqualTo(CompilationStatus.PASS);
     }
 
-    @Test @Order(4)
+    @Test
+    @Order(4)
     @DisplayName("Spec example 2 CSV: CSV double-quote escaped → PASS")
     void specExample2Csv() {
         // CSV encoding: ""please don't forward""
@@ -102,7 +111,8 @@ class LexiconCompileServiceTest {
 
     // ── Response structure ────────────────────────────────────────────────────
 
-    @Test @Order(10)
+    @Test
+    @Order(10)
     @DisplayName("Response echoes termId and termDescription for each term; requestId is propagated")
     void responseEchoesInputFields() {
         var req = new TypedCompileRequest();
@@ -112,14 +122,15 @@ class LexiconCompileServiceTest {
         req.setTerms(List.of(new TypedCompileRequest.TermInput("echo_test::42", "price OR spread")));
 
         var resp = service.compile(req);
-        var result = resp.results().get(0);
+        var result = resp.results().getFirst();
 
         assertThat(result.termId()).isEqualTo("echo_test::42");
         assertThat(result.termDescription()).isEqualTo("price OR spread");
         assertThat(resp.requestId()).isEqualTo("test-request-id-42");
     }
 
-    @Test @Order(11)
+    @Test
+    @Order(11)
     @DisplayName("Summary counts match individual term statuses")
     void summaryCounts() {
         // The translator escapes special regex chars like '[' or '(' to literals, so those
@@ -139,7 +150,8 @@ class LexiconCompileServiceTest {
         assertThat(resp.hasFailures()).isTrue();
     }
 
-    @Test @Order(12)
+    @Test
+    @Order(12)
     @DisplayName("FAILED term has a non-blank diagnostic — an unclosed quoted phrase is caught as a translation error")
     void failedTermHasError() {
         var resp = compile("err_test", "\"unclosed quote");
@@ -153,7 +165,8 @@ class LexiconCompileServiceTest {
         assertThat(diagnostic).isNotBlank();
     }
 
-    @Test @Order(13)
+    @Test
+    @Order(13)
     @DisplayName("engineMode is always HYPERSCAN_NATIVE, never RE2J or fallback")
     void engineModeNeverFallback() {
         var resp = compile("mode_test", "price OR spread");
@@ -162,11 +175,12 @@ class LexiconCompileServiceTest {
         assertThat(resp.engineMode()).doesNotContainIgnoringCase("fallback");
     }
 
-    @Test @Order(14)
+    @Test
+    @Order(14)
     @DisplayName("A PASS term's translatedPattern is never null or empty — always at least one entry")
     void translatedPatternNeverEmptyOnPass() {
         var resp = compile("nonempty_test", "price OR spread");
-        var result = resp.results().get(0);
+        var result = resp.results().getFirst();
         assertThat(result.isPass()).isTrue();
         assertThat(result.translatedPattern()).isNotNull();
         assertThat(result.translatedPattern()).isNotEmpty();
@@ -174,67 +188,76 @@ class LexiconCompileServiceTest {
 
     // ── Multi-language compilation ────────────────────────────────────────────
 
-    @Test @Order(20)
+    @Test
+    @Order(20)
     @DisplayName("Korean terms compile successfully with UTF8 flags")
     void koreanCompiles() {
         var resp = compile("ko_rule", "비밀 OR 내부자 거래");
         assertThat(resp.passCount()).isEqualTo(1);
-        assertThat(resp.results().get(0).hyperscanFlags()
+        assertThat(resp.results().getFirst().hyperscanFlags()
                 & 32).isEqualTo(32); // UTF8 flag
     }
 
-    @Test @Order(21)
+    @Test
+    @Order(21)
     @DisplayName("Japanese terms compile successfully")
     void japaneseCompiles() {
         var resp = compile("ja_rule", "株価操作 OR インサイダー取引");
         assertThat(resp.passCount()).isEqualTo(1);
     }
 
-    @Test @Order(22)
+    @Test
+    @Order(22)
     @DisplayName("Chinese/Mandarin terms compile successfully")
     void chineseCompiles() {
         var resp = compile("zh_rule", "内幕交易 OR 操纵市场");
         assertThat(resp.passCount()).isEqualTo(1);
     }
 
-    @Test @Order(23)
+    @Test
+    @Order(23)
     @DisplayName("Arabic terms compile successfully")
     void arabicCompiles() {
         var resp = compile("ar_rule", "مخالفة OR استثمار داخلي");
         assertThat(resp.passCount()).isEqualTo(1);
     }
 
-    @Test @Order(24)
+    @Test
+    @Order(24)
     @DisplayName("Hebrew terms compile successfully")
     void hebrewCompiles() {
         var resp = compile("he_rule", "מסחר פנים OR מניפולציה");
         assertThat(resp.passCount()).isEqualTo(1);
     }
 
-    @Test @Order(25)
+    @Test
+    @Order(25)
     @DisplayName("German umlaut terms compile with UTF8+UCP flags")
     void germanCompiles() {
         var resp = compile("de_rule", "Übernahme OR Insiderhandel");
         assertThat(resp.passCount()).isEqualTo(1);
-        assertThat(resp.results().get(0).hyperscanFlags() & 32).isEqualTo(32); // UTF8
+        assertThat(resp.results().getFirst().hyperscanFlags() & 32).isEqualTo(32); // UTF8
     }
 
-    @Test @Order(26)
+    @Test
+    @Order(26)
     @DisplayName("Turkish terms compile with UTF8+UCP flags")
     void turkishCompiles() {
         var resp = compile("tr_rule", "içeriden bilgi OR piyasa manipülasyonu");
         assertThat(resp.passCount()).isEqualTo(1);
     }
 
-    @Test @Order(27)
+    @Test
+    @Order(27)
     @DisplayName("Emoji terms compile with UTF8+UCP flags")
     void emojiCompiles() {
         var resp = compile("emoji_rule", "💰 OR 🤫 OR 🤐");
         assertThat(resp.passCount()).isEqualTo(1);
-        assertThat(resp.results().get(0).hyperscanFlags() & 32).isEqualTo(32); // UTF8
+        assertThat(resp.results().getFirst().hyperscanFlags() & 32).isEqualTo(32); // UTF8
     }
 
-    @Test @Order(28)
+    @Test
+    @Order(28)
     @DisplayName("Mixed English + Korean + emoji compiles")
     void mixedLanguageCompiles() {
         var resp = compile("mixed_rule", "insider OR 내부자 OR 💰");
@@ -243,38 +266,41 @@ class LexiconCompileServiceTest {
 
     // ── FOLLOWEDBY proximity ──────────────────────────────────────────────────
 
-    @Test @Order(30)
+    @Test
+    @Order(30)
     @DisplayName("FOLLOWEDBY{3}: don't FOLLOWEDBY{3} compliance → PASS")
     void followedByCompiles() {
         var resp = compile("fb_rule", "don't FOLLOWEDBY{3} compliance");
         assertThat(resp.passCount()).isEqualTo(1);
-        assertThat(resp.results().get(0).translatedPattern().get(0)).contains("don't");
-        assertThat(resp.results().get(0).translatedPattern().get(0)).contains("{0,3}");
+        assertThat(resp.results().getFirst().translatedPattern().getFirst()).contains("don't");
+        assertThat(resp.results().getFirst().translatedPattern().getFirst()).contains("{0,3}");
     }
 
     // ── AND: corrected co-occurrence semantics ──────────────────────────────────
 
-    @Test @Order(40)
+    @Test
+    @Order(40)
     @DisplayName("AND operator: compiles DIRECTLY into a correct co-occurrence pattern, self-contained, no exclusion needed")
     void andCompilesSelfContained() {
         var resp = compile("and_rule", "insider AND announcement AND price");
         assertThat(resp.passCount()).isEqualTo(1);
         assertThat(resp.failedCount()).isEqualTo(0);
-        assertThat(resp.results().get(0).requiresExclusionCheck()).isFalse();
-        assertThat(resp.results().get(0).exclusionPattern()).isNull();
+        assertThat(resp.results().getFirst().requiresExclusionCheck()).isFalse();
+        assertThat(resp.results().getFirst().exclusionPattern()).isNull();
         // All three operands appear somewhere in the pattern (every ordering permutation).
-        assertThat(resp.results().get(0).translatedPattern().get(0))
+        assertThat(resp.results().getFirst().translatedPattern().getFirst())
                 .contains("insider").contains("announcement").contains("price");
     }
 
     // ── AND NOT: the two-list contract ──────────────────────────────────────────
 
-    @Test @Order(41)
+    @Test
+    @Order(41)
     @DisplayName("AND NOT: requiresExclusionCheck true, exclusionPattern has exactly one entry for a simple exclusion")
     void andNotProducesExclusionList() {
         var resp = compile("and_not_rule", "insider AND NOT (compliance OR legal)");
         assertThat(resp.passCount()).isEqualTo(1);
-        var result = resp.results().get(0);
+        var result = resp.results().getFirst();
         assertThat(result.requiresExclusionCheck()).isTrue();
         assertThat(result.exclusionPattern()).isNotNull();
         assertThat(result.exclusionPattern()).hasSize(1);
@@ -283,7 +309,8 @@ class LexiconCompileServiceTest {
 
     // ── Performance ───────────────────────────────────────────────────────────
 
-    @Test @Order(50)
+    @Test
+    @Order(50)
     @DisplayName("Performance: 100 term compilations in under 10 seconds")
     void performance() {
         long start = System.currentTimeMillis();
